# disjunctive-zk

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  cds-compiler.code-workspace  disjunctive-zk.code-workspace  performances.csv  performances2.csv  plots.ipynb  requirements.txt
benchmarks/: Cargo.toml
benchmarks/benches/: cds_benchmark.rs  cds_benchmark2.rs  rot256_benchmark.rs  stacksig_benchmark.rs
benchmarks/src/: lib.rs
cds-compiler/: Cargo.toml  README.md
cds-compiler/benches/: cds_benchmark.rs
cds-compiler/src/: compiler.rs  lib.rs  main.rs
libs/cds-compiler/: Cargo.toml  README.md
libs/cds-compiler/src/: compiler.rs  lib.rs  selfcompiler.rs  shareable.rs  tests.rs
libs/schnorr/: Cargo.toml  README.md
libs/schnorr/src/: asdf.rs  error.rs  lib.rs  sigma.rs
libs/shamir-ss/: Cargo.toml
libs/shamir_ss/: Cargo.toml
libs/shamir_ss/src/: lagrange.rs  lib.rs  shamir.rs  shamir_error.rs
libs/sigmazk/: Cargo.toml
libs/sigmazk/src/: error.rs  lib.rs  message.rs  schnorr.rs  sigma.rs  zk.rs
libs/speed-stacking/: Cargo.toml
libs/speed-stacking/src/: compressor.rs  homomorphism.rs  lib.rs
libs/speed-stacking/src/compressable/: base.rs  base25519.rs  mechanism.rs  mod.rs
libs/speed-stacking/src/zk-ip/: mod.rs  multiround-stacker.rs
libs/stacksig-compiler/: Cargo.toml
libs/stacksig-compiler/selfstack_macro/: Cargo.toml
libs/stacksig-compiler/selfstack_macro/src/: lib.rs
libs/stacksig-compiler/src/: lib.rs  schnorr.rs
libs/stacksig-compiler/src/commitment_scheme/: halfbinding.rs  mod.rs  rot256.rs
libs/stacksig-compiler/src/commitment_scheme/qbinding/: inner_outer.rs  mod.rs  qbinding.rs  tests.rs
libs/stacksig-compiler/src/rot256/: mod.rs  r256comm.rs  r256compiler.rs  r256fiat.rs  r256schnorr.rs  r256stack.rs
libs/stacksig-compiler/src/stackable/: implementations.rs  mod.rs  schnorr.rs  stackable.rs
libs/stacksig-compiler/src/stackers/: recursive_selfstacker.rs  selfstacker.rs  tests.rs
libs/wrapped-ristretto/: Cargo.toml
libs/wrapped-ristretto/src/: lib.rs  ristretto.rs  scalar.rs
plots/: performances.csv  performances2.csv  plots.ipynb
plots/proofsize_plots/: .gitattributes
stacksig-compiler/: Cargo.toml
stacksig-compiler/benches/: rot256_benchmark.rs  stacksig_benchmark.rs
stacksig-compiler/selfstack_macro/src/: lib.rs
stacksig-compiler/src/: comm.rs  compiler.rs  fiat.rs  lib.rs  schnorr.rs  stack.rs  util.rs
stacksig-compiler/src/commitment_scheme/: comm.rs  halfbinding.rs  mod.rs  qbinding.rs
stacksig-compiler/src/commitment_scheme/qbinding/: inner_outer.rs  mod.rs  qbinding.rs
stacksig-compiler/src/stackable/: mod.rs  schnorr.rs  stackable.rs
stacksig-compiler/src/stacker/: mod.rs  selfstacker.rs  stacker.rs  tests.rs
stacksig-compiler/src/stackers/: mod.rs  selfstacker.rs  tests.rs
