[package]
name = "cds-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schnorr = { path = "../libs/schnorr" }
shamir_ss = { path = "../libs/shamir_ss" }
curve25519-dalek = "4.0.0-pre.2"
rand_chacha = "0.3"
rand_core = "0.6"
blsttc = "8.0.0"
itertools = "0.10.5"
