[package]
name = "stacksig-compiler"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3"
rand_core="0.5.1"
sha2 = "0.9.3"
digest = "0.9"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "stacksig_benchmark"
harness = false
