[package]
name = "stacksig-compiler"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.0.0-pre.2", features = ["rand_core", "digest"] }
rand = "0.8.4"
rand_core = "0.6"
rand_chacha = "0.3"
sha2 = "0.10.6"
digest = "0.10.6"
sigmazk = { path = "../libs/sigmazk" }


[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "stacksig_benchmark"
harness = false
