[package]
name = "cds-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sigmazk = { path = "../sigmazk" }
shamir_ss = { path = "../shamir_ss" }
curve25519-dalek-ml = "4.0.0-pre.2"
rand_chacha = "0.3"
rand_core = "0.6"
blsttc = "8.0.0"
itertools = "0.10.5"

