[package]
name = "schnorr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.0.0-pre.2", features = ["rand_core"] }
rand = "0.8.4"
rand_core = "0.6"
rand_chacha = "0.3"