[package]
name = "shamir_ss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vsss-rs = { version="2.1.0", features=["std"] }
curve25519-dalek-ml = "4.0.0"
elliptic-curve = "0.12"
rand = "0.8.4"
rand_core = "0.6.3"
rand_chacha = "0.3.1"